fix: Align text with justify

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -581,5 +581,13 @@ body {
   
   p {
     margin-bottom: 15px;
+    text-align: justify;
+  }
+}
+
+.post-content {
+  
+  p {
+    text-align: justify;
   }
 }
